2012-02-13 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/ajax/visual_console_builder.ajax.php:  Removed max, min
	options when a module graph is created in visual console editor.
	
	Merged bugfix from trunk.

2012-02-10 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_reporting.php,
	include/functions_groups.php: Fixed a problem in Group View that hide empty parent
	groups when their children has agents.

2012-02-10  Miguel de Dios  <miguel.dedios@artica.es>
	
	* * extensions/module_groups.php, include/functions_modules.php,
	godmode/agentes/module_manager_editor_prediction.php: cleaned
	source code style.

	* godmode/agentes/configurar_agente.php: cleaned source code style and fixed
	the duplication of module.
	
	* include/functions_agents.php: fixed the get modules into function
	"agents_get_modules", before the function return ever the policy modules
	without apply filter.
	
	Fixes: #3482260

	Bugfix merged from trunk.

2012-02-10 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_groups.php: Added links to different sections with
	the suitable filters. 

2012-02-10 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_modules.php: Changed module status image for unknown
	status to gray.

2012-02-09  Sergio Martin <sergio.martin@artica.es>

	* godmode/groups/group_list.php: Clean old code used in
	policy agents filter ajax calling merged from trunk

2012-02-09  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_html.php: cleaned source code style, and into the
	function "html_print_select" fixed when the data hasn't "optgroup" items.
	
	* include/functions_reports.php: cleaned source code style, and into the
	function "reports_get_report" fixed empty arrays of reports.

	Bigfix merged from trunk.

2012-02-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/module_manager_editor_prediction.php: Fixed error
	merging bugfix from trunk.
