@@ -1,3 +1,13 @@
+2012-02-13  Miguel de Dios  <miguel.dedios@artica.es>
+
+	* operation/agentes/estado_monitores.php, operation/agentes/ver_agente.php:
+	cleaned source code style.
+	
+	* include/functions_agents.php: refixed the query to extract modules for the
+	ACL policies.
+	
+	Merged bugfix from trunk.
+	
 2012-02-13 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
 	* include/ajax/visual_console_builder.ajax.php:  Removed max, min
